src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: test-orlando
spec:
  type: ClusterIP
  selector:
    app: test-app # Here the key and value must match a pod label.
  ports:
    - protocol: 'TCP'
      port: 8080 # Outside facing port
      targetPort: 8080 # Internal app defined port
