src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: test-orlando
spec:
  ingressClassName: traefik
  rules:
  - host: test1.orlando-k8s-test.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: test-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test1.orlando-k8s-test.duckdns.org
    secretName: test-app-secret
