src/master-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: test-orlando
spec:
  type: ClusterIP
  selector:
    app: test-app # Here the key and value must match a pod label.
  ports:
    - protocol: 'TCP'
      port: 8080 # Outside facing port
      targetPort: 8080 # Internal app defined port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: test-orlando
spec:
  ingressClassName: traefik
  rules:
  - host: test1.orlando-k8s-test.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: test-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test1.orlando-k8s-test.duckdns.org
    secretName: test-app-secret
---
apiVersion: apps/v1
kind: Deployment
metadata: # Deployment object metadata
  name: test-app-deployment
  namespace: test-orlando
spec: # This is the spec for the deployment object.
  replicas: 1
  selector: # This selects the pods to control
    matchLabels: # This can be also matchExpressions
      app: test-app # This must match the pod labels in number and values.
  template: # Here i'm specifying a Pod object template.
    metadata: # Pod object metadata
      labels:
        app: test-app # Here the key and value are up to you. You can have multiple labels
    spec: # Pod object specification
      containers:
        - name: test-node-app
          image: orjoeslo/first-k8s-app:2
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            initialDelaySeconds: 5
